# librustvoting

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GENESIS.md  Makefile  Package.swift  README.md  SETUP_JOIN.md  clean-validator.sh  genesis.json  go.mod  join-dev.sh  join.sh  mise.toml
.github/workflows/: ci.yml  fund-validator.yml  lockfile.yml  nullifier-ingest-deploy.yml  release.yml  sdk-chain-deploy.yml
app/: ante.go  app.go  app_config.go
circuits/: Cargo.toml
circuits/include/: zally_circuits.h
circuits/src/: ffi.rs  lib.rs
circuits/tests/: generate_fixtures.rs
docs/: cosmos-sdk-messages-spec.md  infra.md  mobile-voting-api.md  voting-session-state-machine.md
docs/specs/: gov-steps-v1.md
e2e-tests/: Cargo.toml
e2e-tests/src/: payloads.rs  setup.rs
e2e-tests/tests/: voting_flow.rs  voting_flow_librustvoting.rs
helper-server/src/: nullifier.rs  types.rs
keystone-qr/: README.md
librustvoting/: Cargo.toml
librustvoting/src/: governance.rs  tree_sync.rs  types.rs  zkp1.rs  zkp2.rs
librustvoting/src/storage/: migrations.rs  mod.rs  operations.rs  queries.rs
librustvoting/src/storage/migrations/: 001_init.sql
librustzcash/zcash_client_sqlite/: CHANGELOG.md  Cargo.toml
nullifier-ingest/imt-tree/tests/: imt_circuit_integration.rs
nullifier-ingest/nf-server/src/: cmd_serve.rs
nullifier-ingest/pir-client/src/: lib.rs
nullifier-ingest/pir-export/src/: lib.rs  main.rs  tier0.rs  tier1.rs  tier2.rs
nullifier-ingest/pir-export/tests/: round_trip.rs
nullifier-ingest/pir-server/src/: lib.rs  main.rs
nullifier-ingest/pir-test/src/: main.rs
nullifier-ingest/service/tests/: api_integration.rs
nullifier-ingest/src/: trees.rs
orchard/benches/: delegation.rs
orchard/src/: circuit.rs  lib.rs  spec.rs
orchard/src/circuit/: README.md  address_ownership.rs  elgamal.rs  gadget.rs
orchard/src/circuit/gadget/: mul_chip.rs
orchard/src/constants/: fixed_bases.rs
orchard/src/delegation/: README.md  builder.rs  circuit.rs  imt.rs  imt_circuit.rs
orchard/src/share_reveal/: circuit.rs  mod.rs
orchard/src/shared_primitives/: spend_authority.rs
orchard/src/vote_proof/: README.md  builder.rs  circuit.rs
plans/: 09_msgsubmittally_tally_entries_83232df3.plan.md  0_init_plan.md  10_elgamal_pallas_baseline.plan.md  15_ea_key_ceremony_keeper_9e78e72b.plan.md  16_ceremony_state_machine_refactor_98b4e4b1.plan.md  18_threshold_decryption_design_d3f0020c.plan.md
plans/todo/: zashi-voting-lifecycle-for-testing.md
scripts/: ai-audit.sh  release-xcframework.sh  remote-ceremony.sh
src/: action.rs  db.rs
supply-chain/: audits.toml
tests/api/: README.md
tests/api/src/: delegation.test.ts  helpers.ts
vote-commitment-tree/: Cargo.toml  README.md
vote-commitment-tree-client/: Cargo.toml
vote-commitment-tree-client/src/: http_sync_api.rs  lib.rs  main.rs  transport.rs
vote-commitment-tree-client/tests/: mock_server_tests.rs
vote-commitment-tree/docs/: POC_SYNC_DESIGN.md
vote-commitment-tree/src/: client.rs  kv_shard_store.rs  server.rs
vote-commitment-tree/tests/: client_server_integration.rs
voting-circuits/src/share_reveal/: circuit.rs  prove.rs
voting-circuits/src/vote_proof/: prove.rs
zashi-ios/modules/Sources/Dependencies/VotingAPIClient/: VotingAPIClientLiveKey.swift
zashi-ios/modules/Sources/Dependencies/VotingCryptoClient/: VotingCryptoClientInterface.swift  VotingCryptoClientLiveKey.swift
zashi-ios/modules/Sources/Dependencies/VotingModels/: VotingModels.swift
zashi-ios/modules/Sources/Features/Voting/: ProposalDetailView.swift  ProposalListView.swift  VotingStore.swift  VotingView.swift  WalletSyncingView.swift
zashi-ios/secant.xcodeproj/: project.pbxproj
zcash-voting-ffi/: Cargo.toml  Makefile
zcash-voting-ffi/Sources/ZcashVotingFFI/: zcash_voting_ffi.swift
zcash-voting-ffi/rust/src/: lib.rs
zcash_voting/: Cargo.toml
zcash_voting/src/: action.rs  governance.rs  http_transport.rs  lib.rs  tree_sync.rs  types.rs  zkp1.rs  zkp2.rs
zcash_voting/src/storage/: migrations.rs  mod.rs  operations.rs  queries.rs
zcash_voting/src/storage/migrations/: 001_init.sql
