[package]
name = "vote-commitment-tree-client"
version = "0.2.0"
edition = "2021"
description = "HTTP client and CLI for syncing and verifying the vote commitment tree against a running Zcash shielded-voting chain node."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/zcash_voting"
readme = "README.md"

[features]
default = []
# HTTP transport for syncing the tree from a vote chain node's REST API.
# Enables the `http_sync_api` module and pulls in `reqwest` (rustls-tls only,
# no native-tls / openssl / security-framework / schannel chain).
http = ["dep:reqwest"]
# `vote-tree-cli` binary. Implies `http` because the binary syncs over HTTP.
# Pulls in `clap`.
cli = ["http", "dep:clap"]

[[bin]]
name = "vote-tree-cli"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
vote-commitment-tree = { path = "../vote-commitment-tree", version = "0.1" }
pasta_curves = "0.5"
ff = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
base64 = "0.22"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
mockito = "1"
