[package]
name = "zcash_voting"
version = "0.1.0"
edition = "2021"
description = "Client-side library for Zcash shielded voting: ZKP delegation and vote-commitment proofs (Halo 2), ElGamal encryption, governance PCZT construction, Merkle witness generation, and SQLite round-state persistence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/zcash_voting"
readme = "README.md"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PIR (private nullifier exclusion proofs)
pir-client = "0.1.0"

# Vote commitment tree (VAN witness generation)
vote-commitment-tree = { path = "../vote-commitment-tree", version = "0.1.0" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client", version = "0.1.0" }

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Single orchard: zcash_keys / pczt / zcash_primitives are pulled from the fork tip
# (valargroup/librustzcash PR #43), which internally resolves `orchard` through the
# `valar-orchard` package on crates.io — the same crate voting-circuits depends on.
# Cargo sees one Orchard node in the graph, so no compat bridge is needed.
subtle = "2.6"
orchard = { version = "0.12.0", package = "valar-orchard" }
voting-circuits = { version = "0.2.0", features = ["share-reveal"] }
nonempty = "0.11"
zip32 = "0.2"
incrementalmerkletree = "0.8"

# librustzcash pins — valargroup/librustzcash PR #43 tip
# (`shielded-vote-for-zodl-3.4.0`, rebased onto upstream zcash/main 95b000e,
# i.e. the last commit before sapling-crypto 0.7 / orchard 0.13). Bump in lockstep
# when that PR advances or merges.
#
# `zcash_protocol` is pinned alongside the other librustzcash crates so the graph
# has a single version; pulling it from crates.io would let zcash_keys / pczt /
# zcash_primitives see a second `zcash_protocol` node and Cargo would reject the
# trait impls as "different types".
zcash_protocol = { git = "https://github.com/valargroup/librustzcash", rev = "6534482c1cc595f38e0aaa63c4c7c4689360d766" }
zcash_keys = { git = "https://github.com/valargroup/librustzcash", rev = "6534482c1cc595f38e0aaa63c4c7c4689360d766", features = ["orchard"] }
pczt = { git = "https://github.com/valargroup/librustzcash", rev = "6534482c1cc595f38e0aaa63c4c7c4689360d766", features = ["orchard", "io-finalizer", "signer", "zcp-builder"] }
zcash_primitives = { git = "https://github.com/valargroup/librustzcash", rev = "6534482c1cc595f38e0aaa63c4c7c4689360d766" }
